refactor pp for L6+ level